Fix subclasiffications align and fix contracts graph

--- a/public/stylesheets/searcher.styl
+++ b/public/stylesheets/searcher.styl
@@ -14,38 +14,38 @@
         text-align left
         min-width 100px
     .dropdown-menu-morefilters
-        border 1px solid 
+        border 1px solid
         background-color #e6e6e6
         width calc(100% - 20px)
         position absolute
         left 5px
-        padding 11px 0 0 
-        margin 0 
+        padding 11px 0 0
+        margin 0
         max-height calc(100vh - 140px)
         overflow auto
         .selection-filter-box
             max-width: none
             overflow visible
             display none
-            .filter-selected 
+            .filter-selected
                 display none
             &.with-value
                 margin: 0 0 0.5rem 1rem;
                 display inline-block !important
                 .filter-selected
                     display inline
-                .dropdown-menu 
+                .dropdown-menu
                     margin-top -22px !important
 
-        .dropdown-menu 
+        .dropdown-menu
             transform: none !important
             position static !important
-            width 100% !important 
+            width 100% !important
             background-color #e6e6e6
             border none !important
             padding 0 !important
             margin-bottom 1em
-            h6 
+            h6
                 display none
         .nav-item
             max-width none
@@ -58,10 +58,10 @@
         border-right 3px solid $main-color
         margin-left 0
     .filter-dropdown
-        position static !important  
+        position static !important
     .filter-dropdown-menu
-        margin-top 0px !important  
-        width 100% !important 
+        margin-top 0px !important
+        width 100% !important
         background-color #e6e6e6
         padding 1rem
         // text-align center
@@ -69,7 +69,7 @@
         white-space normal
         p
             margin 0
-    .filter-type-description 
+    .filter-type-description
         font-size 0.7em
     .filter-dropdown-item.active, .filter-dropdown-item:active
         color #16181b
@@ -159,10 +159,10 @@
     //Hide all filters, then show only filters ofr the current collection
     .filter-element
       display none
-    
+
     .filter-collection-all
       display block
-    
+
     ul.filter-active-collection-all .filter-collection-all-only
       display block
 
@@ -171,23 +171,23 @@
 
     ul.filter-active-collection-contracts .filter-collection-contracts
       display block
-    
+
     ul.filter-active-collection-institutions .filter-collection-institutions
       display block
-    
+
     ul.filter-active-collection-persons .filter-collection-persons
       display block
-    
+
     ul.filter-active-collection-areas .filter-collection-areas
       display block
 
     ul.filter-active-collection-products .filter-collection-products
       display block
- 
-    // .left-box 
+
+    // .left-box
     //     overflow hidden
     //     width calc(100% - 400px)
-    //     #filtersList 
+    //     #filtersList
     //         // flex-wrap nowrap
 
 
@@ -237,7 +237,7 @@
 
 .index-list-title
     margin-bottom 0.4rem
-    a 
+    a
         font-weight bold
         color #4e4e4e
         font-size 1.3rem
@@ -263,10 +263,10 @@
     -ms-flex-align start
     align-items start
     font-size 0.9em
-    p 
+    p
         color $gray
 
-    a p 
+    a p
         color #2b00f7
 
     .full-elements
@@ -280,6 +280,7 @@
 
     .left-elements
     .right-elements
+        position static
         padding 0
 
         div
@@ -299,7 +300,7 @@
         // -webkit-flex 0 auto
         // -ms-flex 0 auto
         // flex 0 auto
-        
+
         // display -webkit-box
         // display -webkit-flex
         // display -ms-flexbox
@@ -317,6 +318,32 @@
         // -ms-flex 0 auto
         // flex 0 auto
         // float right
+        .area-institution
+            position absolute
+            right calc(60px + 13% * 5)
+            text-align: right
+        .area-owner
+            position absolute
+            right calc(60px + 13% * 3)
+            text-align: right
+        .area-company
+            position absolute
+            right calc(60px + 13% * 0)
+            text-align: right
+        .area-proveedor
+            position absolute
+            right calc(60px + 13% * 2)
+            text-align: right
+        .area-person
+            position absolute
+            right calc(60px + 13% * 1)
+            text-align: right
+        .area-funcionario
+            position absolute
+            right calc(60px + 13% * 4)
+            text-align: right
+
+
 
 .index-list-element
     margin-right 1em
@@ -368,7 +395,7 @@
 
 // PAGINATION
 
-.pagination 
+.pagination
     flex-wrap wrap
 .page-link
     color $light-text-color
@@ -384,7 +411,7 @@
 .input-group-prepend .btn, .input-group-append .btn
     z-index 0
 
-.page-ellipsis 
+.page-ellipsis
     position relative
     display block
     padding 0.5rem 0.2rem
@@ -412,18 +439,24 @@
 .date-graph
     transform rotate(90deg)
     white-space: nowrap
-    margin 10px 0 0 0
+    margin: 15px auto 0 auto;
+    display: inline-block;
+    text-align: center;
+    width: 100%;
 
 // RESPONSIVE VIEWS
 
 @media screen and (max-width: 991px)
     .filters
         top 56px
+    .index-list-elements
+        .right-elements
+            padding-right: 20px
 
 
 @media screen and (max-width: 767px)
     // .index-list-elements
-    //     span 
+    //     span
     //         display none
         // -webkit-box-orient vertical
         // -webkit-box-direction normal
@@ -444,7 +477,7 @@
         // margin-top 2rem
         text-align center !important
         .form-group
-            select 
+            select
                 float none !important
                 margin auto
 
@@ -479,7 +512,7 @@
         flex-direction column
 
 @media screen and (max-width: 590px)
-    .filters 
+    .filters
         .filter-selected.simple
             font-size 0.8rem
             margin-top -4px
@@ -510,7 +543,7 @@
         max-width none
         min-width auto
 @media screen and (max-width: 364px)
-    .filters 
+    .filters
         .filter-selected.simple
             font-size 0.6rem
             margin-top -4px
